--- a/book-shelf-frontend/book-shelf-fe/src/css/home.css
+++ b/book-shelf-frontend/book-shelf-fe/src/css/home.css
@@ -1,6 +1,19 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+} */
+.home-main{
+    display: flex;
+    flex-direction: column;
+}
+.home-main a, li{
+     text-decoration: none;
+     padding: 8px;
+     list-style-type: none;
+     
+}
+li:hover{
+font-weight: bold;
 }
