--- a/book-shelf-frontend/book-shelf-fe/src/css/header.css
+++ b/book-shelf-frontend/book-shelf-fe/src/css/header.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin: 0 30px;
+    margin: 0 auto;
 }
 .nav-links{
     display: flex;
