--- a/book-shelf-frontend/book-shelf-fe/src/css/tile.css
+++ b/book-shelf-frontend/book-shelf-fe/src/css/tile.css
@@ -1,4 +1,5 @@
 /* Tile.css */
+@import "tailwindcss";
 .tile {
   display: flex;
   flex-direction: column;
@@ -11,7 +12,7 @@
   padding: 1rem;
 
   border-radius: 16px;
-  background: white;
+  background: rgba(140, 197, 238, 0.2);
   text-decoration: none;
   color: black;
 
